# hotel-management-system

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  bandit.yaml  black_conf.toml  docker-compose.yml  pyproject.toml  requirements.txt
.ebextensions/: django.config
backend/: .coverage  .coveragerc  db.sqlite3  hotel_management_system.dot  myapp_models.dot
backend/backend/: api.py  celery.py  settings.py  urls.py
backend/booking/: admin.py  api.py  factories.py  models.py  room_locking.py  serializers.py  tests.py  views.py
backend/booking/migrations/: 0001_initial.py  0002_remove_booking_room_booking_room.py  0003_remove_booking_room_booking_room.py  (+5 more)
backend/discounts/: admin.py  api.py  apps.py  discount_counter.py  factories.py  models.py  serializers.py  tests.py  views.py
backend/discounts_management/: apps.py
backend/hotel_management/: admin.py  api.py  apps.py  factories.py  filters.py  models.py  permissions.py  reports.py  serializers.py  tests.py  views.py
backend/project_permissions/: permissions.py
backend/reports/: admin.py  api.py  booking_reports.py  filters.py  hotel_reports.py  models.py  paginations.py  reports.py  reports_generation.py  reports_representation.py  room_reports.py  serializers.py  tests.py  urls.py  views.py
backend/reservation/: models.py  room_locking.py  serializers.py  tests.py  views.py
backend/reviews/: admin.py  api.py  factories.py  models.py  serializers.py  tests.py  views.py
docker/backend/: Dockerfile  server-entrypoint.sh
docker/nginx/: default.conf
(+31 files in other folders)
